--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Cover Page Title</title>
+    <title>Coin Rumors</title>
 
     <link href='http://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -27,8 +27,9 @@
           <div class="cover-container">
             
             <div class="inner cover">
-              <h1 class="cover-heading">Cover Page</h1>
-              <p class="lead">Coming Soon...</p> 
+              <h1 class="cover-heading">Coin Rumors</h1>
+              <p class="lead">What have you heard?</p>
+              <p class="lead">Coming soon...</p> 
             </div>
 
             <div class="mastfoot">
